# sui-indexer

./: HELP.md  README.md  docker-compose.yml  pom.xml
docker-config/clickhouse/dev/: Dockerfile  build.sh
docker-config/clickhouse/init/: 01_create_table.sql
docker-config/clickhouse/prod/: Dockerfile  build.sh
docker-config/liquibase/: Dockerfile  build.sh
indexing-service/: Dockerfile  pom.xml
init/: 01_create_table.sql
kubernetes/: README.md
kubernetes/helm/clickhouse-operator/: Chart.yaml  values.yaml
kubernetes/helm/kafka/: install.sh  values.yaml
kubernetes/helm/postgresql/: Chart.yaml  values.yaml
kubernetes/helm/postgresql-ha/: install.sh  values.yaml
kubernetes/helm/zookeeper/: Chart.yaml  values.yaml
kubernetes/manifests/: 00-namespace-clickhouse.yaml  00-namespace.yaml  01-clickhouse.yaml  01-zookeeper.yaml  02-clickhouse.yaml  03-network-policies.yaml  04-network-policies.yaml
kubernetes/manifests/02-kafka/: kafka-cluster.yaml  kafka-topic.yaml
kubernetes/manifests/03-postgresql/: master-statefulset.yaml  replica-statefulset.yaml  service.yaml
kubernetes/scripts/: deploy.sh  setup-postgres-replication.sh  stop.sh  test-replication.sh
monitoring/: indexing-dashboard.json  prometheus.yml
sui-api/: Dockerfile  pom.xml
sui-checkpoint-receiver/: .dockerignore  .env  Cargo.toml  Dockerfile
sui-checkpoint-receiver/src/: analyze_logs.rs  hashing.rs  local_reader.rs  main.rs  redis_client.rs  redis_manager.rs  remote_reader.rs  rendezvous.rs  replication.rs  swim.rs  test.rs  types.rs  worker.rs
sui-common/: pom.xml
sui-config/: fullnode.yaml
(+114 files in other folders)
