[package]
name = "sui-checkpoint-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
async-trait = "0.1.83"
tokio = { version = "1.38.0", features = ["full"]}
rdkafka = { version = "0.28", features = ["cmake-build", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sui_types = { git = "https://github.com/mystenlabs/sui", package = "sui-types"}
sui_data_ingestion_core = { git = "https://github.com/mystenlabs/sui", package = "sui-data-ingestion-core"}
prometheus = "0.13.3"
anyhow = "1.0.86"

[[bin]]
name = "local_reader"
path = "src/local_reader.rs"

[[bin]]
name = "remote_reader"
path = "src/remote_reader.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[workspace]
