[package]
name = "sui-checkpoint-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
async-trait = "0.1.83"
tokio = { version = "1.38.0", features = ["full"]}
rdkafka = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sui-types = { git = "https://github.com/MystenLabs/sui", package = "sui-types" }
sui-data-ingestion-core = { git = "https://github.com/MystenLabs/sui", package = "sui-data-ingestion-core" }
prometheus = "0.13.3"
anyhow = "1.0.86"
swim-rs = "*"
murmur3 = "0.5.2"


[[bin]]
name = "local_reader"
path = "src/local_reader.rs"

[[bin]]
name = "remote_reader"
path = "src/remote_reader.rs"


[workspace]
